compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_supertrait_object_upcast_preserves_args.rn
// class: const-generic-supertrait-upcast
// source: trait-object upcasts through supertraits must substitute const generic arguments when matching the target trait
// exit: 0

trait Base[N: usize] {
    fn value() i32;
};

trait Derived[N: usize]: Base[N] {};

struct X {};

impl &X: Derived[4] {}

impl &X: Base[4] {
    fn value() i32 {
        return 7;
    }
}

fn main() i32 {
    let x = X.{};
    let derived = &Derived[4].{ x.& };
    let base = &Base[4].{ derived };
    return base.value() - 7;
}
