compiler/kernc_cli/tests/soundness/reject/supertraits/trait_impl_must_prove_declared_supertrait.rn
// source: implementing a derived trait without proving its declared supertrait must be rejected before lowering
// stderr: impl of trait `Derived` is missing a required supertrait proof
// stderr: required bound: `&X: Base`

trait Base {
    fn foo() i32;
};

trait Derived: Base {};

struct X {};

impl &X: Derived {}

fn main() i32 {
    let x = X.{};
    let d = &Derived.{ x.& };
    let b = &Base.{ d };
    return b.foo();
}
